public enum Direction {
    RUNNING,
    WON,
    LOST
}
