public enum GameStatus {
    UP,
    DOWN,
    LEFT,
    RIGHT
}
