package immobile;

public class Wall implements Tile{

    //same situation as FloorTile,
    // nothing to see here
}
