package immobile;

public class FloorTile implements Tile{

    //there might be something here later,
    // but for now there's nothing to see here :)
}
