package mobile;

public class InputHandler {

    //TODO: complete method getMoveDirection()
    public Direction getMoveDirection(){

    }

    //TODO: complete method isPushPressed()
    public boolean isPushPressed(){

    }

    //TODO: complete method isPausePressed()
    public boolean isPausePressed(){

    }

}
